# gwe

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yaml
src/: README.md  graph.rs  lib.rs
src/graph/: _ids.rs  entity.rs  graph.rs  reference.rs  relationship.rs
