[package]
name = "gwe"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gwe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
serde = { version = "1.0.228", features = ["derive"] }